tests/globals/invalid/variable_used_as_fun.amu
foo:s32 = 3;

main :: () -> s32 {
    return foo();
}